# econpaper

./: .gitignore  README.md  pyproject.toml
EasyPaper/: .gitignore  CODEX_TASKS.md  EVO_FORK_BASELINE.md  IMPORT_BASELINE.md  PKG-INFO  README.md  _AUDIT_v3_patch_spec.md  _AUDIT_v3_risks.md  _AUDIT_v3_synthesis.md  pyproject.toml
EasyPaper/_handoff/: merge_log.md  release_gate.md
EasyPaper/examples/econ/: aer_minimal_request.yaml
EasyPaper/scripts/: run_econ_paper.py
EasyPaper/skills/reviewing/: style_check.yaml
EasyPaper/skills/venues/: jfe.yaml  nature.yaml  neurips.yaml
EasyPaper/src/: main.py
EasyPaper/src/agents/: __init__.py  react_base.py
EasyPaper/src/config/: __init__.py
EasyPaper/src/evidence/: __init__.py
EasyPaper/src/generation/: __init__.py  template_slots.py
EasyPaper/src/models/: evidence_graph.py
EasyPaper/src/skills/: __init__.py  registry.py
EasyPaper/src/utils/: storage_client.py
EasyPaper/tests/: test_artifact_manifest_v1.py  test_artifact_path_validation.py  test_assembly_order_econ.py  test_bugfix_body_section_generation.py  test_core_ref_analyzer.py  test_docling_enricher.py  test_document_input_econ_constraints.py  test_econ_output_reports.py  test_econ_section_generation_content_brief.py  test_econ_section_taxonomy.py  test_execute_generation_exemplar.py  test_execute_generation_passes_content_brief.py  test_exemplar_analyzer.py  test_exemplar_config.py  test_exemplar_external_search.py  test_exemplar_pipeline.py  test_exemplar_selector.py  test_incremental_planning_models.py  test_label_registry.py  test_manifest_to_table_specs.py  test_metadata_overflow_manager.py  test_minimal_econ_finance_fixtures.py  test_plan_result_contract.py  test_planner_format.py  test_planner_required_sections.py  test_research_context_builder.py  test_result_caption_locked.py  test_revision_executor_migration.py  test_skills_bootstrap.py  test_smart_caption_writer.py  test_table_direct_injection.py  test_template_structure_profile.py  test_tex_path_bootstrap.py  test_usage_tracker.py  test_writer_router_endpoints.py
skill4econ/: .gitattributes  .gitignore  README.md  SKILL.md  pyproject.toml  registry.yml  skill_delivery_check.yaml  vendor_sources.lock.json
skill4econ/_handoff/: merge_log.md  release_gate.md
skill4econ/docs/: AGENT_USAGE.md  ARTIFACT_CONTRACT.md  BACKEND_CONTRACT.md  CODEX_RUNBOOK.md  ENV_ECON_ESG_MODEL_ROADMAP_20260604.md  KNOWN_BUGS.md  MODERN_DID_BACKEND_SETUP.md  MODERN_DID_CORE_20260604.md  PRODUCT_REVIEW_20260604.md  REPO_STRUCTURE.md  TODO_DID_V0_1.md  psm_ipw_balance_diagnostics.md  spatial_exposure_did.md
skill4econ/docs/roadmap/: TODO.md  TODO_EasyPaper_EconFinance_Production.md  skill4econ_TODO.md
skill4econ/examples/mini_panel/: csdid_spec.yml  (+45 more)
skill4econ/skills/: README.md
skill4econ/tests/: conftest.py  test_skill_docs_contract.py
skill4econ/vendor_sources/: README.md
(+570 files in other folders)
