[project]
name = "easypaper"
version = "0.2.4"
description = "AI-powered academic paper generation SDK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0.5",
    "openai>=2.7.2",
    "langgraph>=0.0.26",
    "jinja2>=3.1.0",
    "httpx>=0.27.0",
    "pymupdf>=1.26.7",
    "pdf2image>=1.17.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pillow>=10.0",
    "boto3>=1.42.63",
    "python-multipart>=0.0.24",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.121.1",
    "uvicorn[standard]>=0.30.0,<0.31",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "ipython>=9.7.0",
    "ruff>=0.15.14",
]
vlm = [
    "anthropic>=0.18.0",
]
docling = [
    "docling>=2.0",
]
images = [
    "academic_dreamer>=0.1.0",
]

[tool.pytest.ini_options]
addopts = "-m 'not live_llm and not latex and not slow'"
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "unit: pure unit tests",
    "mock: tests using fake clients or mocked services",
    "integration: local integration tests without live LLM",
    "live_llm: requires real external model/provider credentials",
    "latex: requires local LaTeX/pdflatex installation",
    "slow: slow tests",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["easypaper", "easypaper.*", "src", "src.*"]

[tool.setuptools.package-data]
"src.skills.builtin" = ["**/*.yaml"]
"src.prompts" = ["**/*.txt"]
