[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skill4econ"
version = "0.1.0"
description = "Repo-local econometrics capability pack for agents."
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
modern-did = [
  "differences",
]
rdd = [
  "rdrobust",
  "rddensity",
]
future-did = [
  "pyfixest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
skill4econ = [
  "configs/*.yaml",
  "contracts/schemas/*.schema.json",
  "schemas/**/*.schema.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
